changed tabs, added icons

--- a/rfid/app.json
+++ b/rfid/app.json
@@ -19,13 +19,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "rfid"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.jessicaouyang.rfid"
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
